syntax = "proto3";

package model;

import "model/annotations.proto";

option go_package = "github.com/tislib/data-handler/pkg/model";

message FunctionCall {
  string host = 1;
  string functionName = 2;
}

message HttpCall {
  string uri = 1;
  string method = 2;
}

message ExternalCall {
  oneof kind {
    FunctionCall functionCall = 1 [(model.hcl_block) = "function_call"];
    HttpCall httpCall = 2 [(model.hcl_block) = "http_call"];
  }
}