syntax = "proto3";

package stub;

option go_package = "github.com/apibrew/apibrew/pkg/stub";

import 'model/data-source.proto';
import 'model/error.proto';
import 'model/resource.proto';
import "google/api/annotations.proto";
import "gnostic/openapi/v3/annotations.proto";

// DataSource Service is for managing data sources
service DataSource {
  rpc Create(CreateDataSourceRequest) returns (CreateDataSourceResponse) {
    option (google.api.http) = {
      post: "/system/data-sources",
      body: "*"
    };
  }
  rpc List(ListDataSourceRequest) returns (ListDataSourceResponse) {
    option (google.api.http) = {
      get: "/system/data-sources"
    };
  }
  rpc Update(UpdateDataSourceRequest) returns (UpdateDataSourceResponse) {
    option (google.api.http) = {
      put: "/system/data-sources",
      body: "*"
    };
  }
  rpc Delete(DeleteDataSourceRequest) returns (DeleteDataSourceResponse) {
    option (google.api.http) = {
      delete: "/system/data-sources",
      body: "*"
    };
  }
  rpc Get(GetDataSourceRequest) returns (GetDataSourceResponse) {
    option (google.api.http) = {
      get: "/system/data-sources/{id}",
    };
  }
  /*
  Status will return connection status of data source
   */
  rpc Status(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/system/data-sources/{id}/_status",
    };
  }
  /*
  List entities will return all entities from data source
   */
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse) {
    option (google.api.http) = {
      get: "/system/data-sources/{id}/entities",
    };
  }
  /*
  PrepareResourceFromEntity will return resource from data source based on entity.
  It is for database first approach. If you already have an entity/table on data source and your want to create resource based on it, you can call this endpoint to do it.
   */
  rpc PrepareResourceFromEntity(PrepareResourceFromEntityRequest) returns (PrepareResourceFromEntityResponse) {
    option (google.api.http) = {
      post: "/system/data-sources/{id}/_prepare_entity",
      body: "*"
    };
  }
}

message PrepareResourceFromEntityRequest {
  string token = 1;
  // data source id, required, It is for specifying that which database the operation will be performed
  string id = 2;
  // catalog is optional, if not provided, default catalog will be used, catalog is like schema in database
  string catalog = 3;
  // entity is required, it is like table in database, collection on mongodb, etc.
  string entity = 4;
}

message PrepareResourceFromEntityResponse {
  model.Resource resource = 1;
}

message StatusRequest {
  string token = 1;
  string id = 2;
}

message StatusResponse {
  bool connectionAlreadyInitiated = 1;
  bool testConnection = 2;
}

message ListEntitiesRequest {
  string token = 1;
  string id = 2;
}

message ListEntitiesResponse {
  repeated model.DataSourceCatalog catalogs = 1;
}

message ListDataSourceRequest {
  string token = 1;
}

message ListDataSourceResponse {
  repeated model.DataSource content = 2;
}

message CreateDataSourceRequest {
  string token = 1;
  repeated model.DataSource dataSources = 2;
}

message CreateDataSourceResponse {
  repeated model.DataSource dataSources = 1;
}

message UpdateDataSourceRequest {
  string token = 1;
  repeated model.DataSource dataSources = 2;
}

message UpdateDataSourceResponse {
  repeated model.DataSource dataSources = 1;
}

message DeleteDataSourceRequest {
  string token = 1;
  repeated string ids = 2;
}

message DeleteDataSourceResponse {
}

message GetDataSourceRequest {
  string token = 1;
  string id = 2;
}

message GetDataSourceResponse {
  model.DataSource dataSource = 1;
}
